--- a/src/App.css
+++ b/src/App.css
@@ -16,5 +16,79 @@
   --Slate-900: hsl(202, 55%, 16%);
 
   /* Typography  */
-  --Font-size: 16px;
+  --FontSize: 16px;
+}
+
+body{
+  background-color: var(--Slate-100);
+  display : flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+.app{
+  max-width:768px;
+  display : flex;
+  align-items: stretch;
+}
+.background{
+  background-color:var(--Slate-900);
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content:center;
+  padding:1.5em;
+}
+form {
+  padding:1.5em;
+  background-color: var(--White);
+}
+.btn {
+  background-color: var(--Lime);
+  padding: 0.75em 1.5em;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius:1.5em;
+  font-weight: bold;
+  font-size:var(--FontSize)
+}
+.flex {
+  display : flex;
+  align-items: center;
+  justify-content: center;
+  gap:0.5em
+}
+
+.radio {
+  border-radius:0.5em;
+  border: 1px solid var(--Slate-100);
+  padding: 0.5em 1em;
+}
+
+.flex-row{
+  display : flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.5em
+}
+
+.flex-col {
+  display : flex;
+  flex-direction: column;
+  gap:0.5em
+}
+
+input[type="text"] {
+  border-radius:0.5em;
+  border: 1px solid var(--Slate-100);
+  padding: 0.5em 1em;
+  outline: none;
+}
+
+.margin-top {
+  margin-top: 1.5em;
+}
+.margin-bottom {
+  margin-bottom: 1.5em;
 }
